cleanup via pre-commit
Signed-off-by: nstarman <nstarman@users.noreply.github.com>

--- a/jupyter_notebooks/1D_spline_v3_JAX.ipynb
+++ b/jupyter_notebooks/1D_spline_v3_JAX.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N=1 # dimension (number of independent variables)"
+    "N = 1  # dimension (number of independent variables)"
    ]
   },
   {
@@ -38,10 +38,10 @@
    "outputs": [],
    "source": [
     "# lower and uppder bounds of x-coordinate in each dimension [a,b]\n",
-    "a=[0] # [1st dim, 2nd dim]\n",
-    "b=[1] # [1st dim, 2nd dim]\n",
-    "a= np.array(a, dtype=float)\n",
-    "b= np.array(b, dtype=float)"
+    "a = [0]  # [1st dim, 2nd dim]\n",
+    "b = [1]  # [1st dim, 2nd dim]\n",
+    "a = np.array(a, dtype=float)\n",
+    "b = np.array(b, dtype=float)"
    ]
   },
   {
@@ -52,8 +52,8 @@
    "outputs": [],
    "source": [
     "# number of grid interval n in each dimension\n",
-    "n=[10] # [1st dim, 2nd dim]\n",
-    "n= np.array(n, dtype=int)"
+    "n = [10]  # [1st dim, 2nd dim]\n",
+    "n = np.array(n, dtype=int)"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "# grid interval n in each dimension\n",
-    "h=(b-a)/n"
+    "h = (b - a) / n"
    ]
   },
   {
@@ -74,10 +74,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#x_grid=(np.linspace(a[0],b[0],n[0]+1), np.linspace(a[1],b[1],n[1]+1))  # tuple of (1st dim grid points , 2nd dim grid points) \n",
-    "x_grid=()\n",
+    "# x_grid=(np.linspace(a[0],b[0],n[0]+1), np.linspace(a[1],b[1],n[1]+1))  # tuple of (1st dim grid points , 2nd dim grid points)\n",
+    "x_grid = ()\n",
     "for j in range(N):\n",
-    "    x_grid += (np.linspace(a[j],b[j],n[j]+1),)\n",
+    "    x_grid += (np.linspace(a[j], b[j], n[j] + 1),)\n",
     "# x_grid[0] is numpy array of 1st dim grid points\n",
     "# x_grid[1] is numpy array of 2nd dim grid points\n",
     "# x_grid"
@@ -90,10 +90,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid_shape=()\n",
+    "grid_shape = ()\n",
     "for j in range(N):\n",
-    "    grid_shape += (n[j]+1,)\n",
-    "y_data= np.zeros(grid_shape)"
+    "    grid_shape += (n[j] + 1,)\n",
+    "y_data = np.zeros(grid_shape)"
    ]
   },
   {
@@ -104,9 +104,9 @@
    "outputs": [],
    "source": [
     "# test y_data\n",
-    "for q1 in range(n[0]+1):\n",
-    "    y_data[q1]= np.sin(x_grid[0][q1])\n",
-    "#y_data"
+    "for q1 in range(n[0] + 1):\n",
+    "    y_data[q1] = np.sin(x_grid[0][q1])\n",
+    "# y_data"
    ]
   },
   {
@@ -117,45 +117,43 @@
    "outputs": [],
    "source": [
     "def compute_1D_spline_coefs(y_data):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Compute 1D spline coefficient matrix c_i1i2\n",
-    "    \n",
+    "\n",
     "    INPUTs:\n",
-    "        y_data: 1D numpy array of y data (real scalar) at x_grid points \n",
-    "    '''\n",
-    "    \n",
-    "    N=1 # dimension of the problem\n",
-    "    \n",
+    "        y_data: 1D numpy array of y data (real scalar) at x_grid points\n",
+    "    \"\"\"\n",
+    "    N = 1  # dimension of the problem\n",
+    "\n",
     "    for j in range(N):\n",
-    "        n[j]= y_data.shape[j]-1 #number of grid interval n in each dimension\n",
-    "    \n",
-    "    \n",
-    "    k=0 # 1-st dimension\n",
-    "    c_shape=()\n",
+    "        n[j] = y_data.shape[j] - 1  # number of grid interval n in each dimension\n",
+    "\n",
+    "    k = 0  # 1-st dimension\n",
+    "    c_shape = ()\n",
     "    for j in range(N):\n",
-    "        if j <= k :\n",
-    "            c_shape += (n[j]+3,)\n",
+    "        if j <= k:\n",
+    "            c_shape += (n[j] + 3,)\n",
     "        else:\n",
-    "            c_shape += (n[j]+1,)\n",
-    "    c_i1=np.zeros(c_shape)\n",
+    "            c_shape += (n[j] + 1,)\n",
+    "    c_i1 = np.zeros(c_shape)\n",
     "    del c_shape\n",
-    "    \n",
-    "    c_i1[1]=y_data[0]/6 # c_{2}\n",
-    "    c_i1[n[k]+1]=y_data[n[k]]/6 # c_{n+2}\n",
-    "    A = np.zeros((n[k]-1,n[k]-1))\n",
-    "    for i in range(n[k]-1):\n",
-    "        A[i,i]=4\n",
-    "        if i+1 < n[k]-1 :\n",
-    "            A[i,i+1]= A[i+1,i]=1\n",
-    "    B = np.zeros(n[k]-1)\n",
-    "    B[0]=y_data[1]-c_i1[1]\n",
-    "    B[n[k]-2]=y_data[n[k]-1]-c_i1[n[k]+1]\n",
-    "    B[1:n[k]-2]=y_data[2:n[k]-1]\n",
+    "\n",
+    "    c_i1[1] = y_data[0] / 6  # c_{2}\n",
+    "    c_i1[n[k] + 1] = y_data[n[k]] / 6  # c_{n+2}\n",
+    "    A = np.zeros((n[k] - 1, n[k] - 1))\n",
+    "    for i in range(n[k] - 1):\n",
+    "        A[i, i] = 4\n",
+    "        if i + 1 < n[k] - 1:\n",
+    "            A[i, i + 1] = A[i + 1, i] = 1\n",
+    "    B = np.zeros(n[k] - 1)\n",
+    "    B[0] = y_data[1] - c_i1[1]\n",
+    "    B[n[k] - 2] = y_data[n[k] - 1] - c_i1[n[k] + 1]\n",
+    "    B[1 : n[k] - 2] = y_data[2 : n[k] - 1]\n",
     "    sol = linalg.solve(A, B)\n",
-    "    c_i1[2:n[k]+1]=sol\n",
-    "    c_i1[0]=2*c_i1[1]-c_i1[2]\n",
-    "    c_i1[n[k]+2]=2*c_i1[n[k]+1]-c_i1[n[k]]\n",
-    "            \n",
+    "    c_i1[2 : n[k] + 1] = sol\n",
+    "    c_i1[0] = 2 * c_i1[1] - c_i1[2]\n",
+    "    c_i1[n[k] + 2] = 2 * c_i1[n[k] + 1] - c_i1[n[k]]\n",
+    "\n",
     "    return c_i1"
    ]
   },
@@ -166,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c_i1= compute_1D_spline_coefs(y_data)"
+    "c_i1 = compute_1D_spline_coefs(y_data)"
    ]
   },
   {
@@ -205,8 +203,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jax import lax\n",
-    "import jax.numpy as jnp"
+    "import jax.numpy as jnp\n",
+    "from jax import lax"
    ]
   },
   {
@@ -216,31 +214,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#1D-spline function (jittable and auto-differentiable)\n",
-    "def s1D(x,a,h,c_i1):\n",
-    "    '''\n",
+    "# 1D-spline function (jittable and auto-differentiable)\n",
+    "def s1D(x, a, h, c_i1):\n",
+    "    \"\"\"\n",
     "    1D-spline interpolation\n",
-    "    \n",
+    "\n",
     "    INPUTs\n",
-    "        x: 1-dim x vector (float) at which interplated y-value is evaluated \n",
+    "        x: 1-dim x vector (float) at which interplated y-value is evaluated\n",
     "        a: 1-dim vector (float) of the lower boundary of the each of the x-dimension\n",
     "        h: 1-dim vector (float) of the grid interval of the each of the x-dimension\n",
-    "        c_i1: spline coefficent (1-dim array)\n",
-    "    '''\n",
-    "    \n",
-    "    def u(ii,aa,hh,xx):\n",
-    "        t= jnp.abs((xx-aa)/hh + 2 - ii)\n",
-    "        return lax.cond(t <= 1, lambda t: 4.-6.*t**2+3.*t**3, lambda t: (2.-t)**3, t)*jnp.heaviside(2.-t, 1.)\n",
-    "    \n",
-    "    def f(carry,i1,c_i1,a,h,x):\n",
-    "        val = c_i1[i1-1]*u(i1,a[0],h[0],x[0])\n",
+    "        c_i1: spline coefficient (1-dim array)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def u(ii, aa, hh, xx):\n",
+    "        t = jnp.abs((xx - aa) / hh + 2 - ii)\n",
+    "        return lax.cond(\n",
+    "            t <= 1, lambda t: 4.0 - 6.0 * t**2 + 3.0 * t**3, lambda t: (2.0 - t) ** 3, t\n",
+    "        ) * jnp.heaviside(2.0 - t, 1.0)\n",
+    "\n",
+    "    def f(carry, i1, c_i1, a, h, x):\n",
+    "        val = c_i1[i1 - 1] * u(i1, a[0], h[0], x[0])\n",
     "        carry += val\n",
-    "        return carry,val\n",
-    "    \n",
-    "    i1arr=jnp.arange(1,c_i1.shape[0]+1)\n",
-    "    \n",
-    "    carry, val =  lax.scan(lambda s1, i1: f(s1, i1=i1, c_i1=c_i1,a=a,h=h,x=x), 0.0, i1arr)\n",
-    "    \n",
+    "        return carry, val\n",
+    "\n",
+    "    i1arr = jnp.arange(1, c_i1.shape[0] + 1)\n",
+    "\n",
+    "    carry, val = lax.scan(\n",
+    "        lambda s1, i1: f(s1, i1=i1, c_i1=c_i1, a=a, h=h, x=x), 0.0, i1arr\n",
+    "    )\n",
+    "\n",
     "    return carry"
    ]
   },
@@ -251,9 +253,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c_i1_jnp= jnp.array(c_i1)\n",
-    "a_jnp=jnp.array(a)\n",
-    "h_jnp=jnp.array(h)"
+    "c_i1_jnp = jnp.array(c_i1)\n",
+    "a_jnp = jnp.array(a)\n",
+    "h_jnp = jnp.array(h)"
    ]
   },
   {
@@ -263,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x=jnp.array([0.5])"
+    "x = jnp.array([0.5])"
    ]
   },
   {
@@ -284,7 +286,7 @@
     }
    ],
    "source": [
-    "s1D(x,a_jnp,h_jnp,c_i1_jnp)"
+    "s1D(x, a_jnp, h_jnp, c_i1_jnp)"
    ]
   },
   {
@@ -333,7 +335,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s1D_jitted= jit(s1D)"
+    "s1D_jitted = jit(s1D)"
    ]
   },
   {
@@ -354,7 +356,7 @@
     }
    ],
    "source": [
-    "s1D_jitted(x,a_jnp,h_jnp,c_i1_jnp)"
+    "s1D_jitted(x, a_jnp, h_jnp, c_i1_jnp)"
    ]
   },
   {
@@ -364,7 +366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds1D= grad(s1D)"
+    "ds1D = grad(s1D)"
    ]
   },
   {
@@ -385,7 +387,7 @@
     }
    ],
    "source": [
-    "ds1D(x,a_jnp,h_jnp,c_i1_jnp)"
+    "ds1D(x, a_jnp, h_jnp, c_i1_jnp)"
    ]
   },
   {
@@ -395,7 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds1D_jitted= jit(grad(s1D))"
+    "ds1D_jitted = jit(grad(s1D))"
    ]
   },
   {
@@ -416,7 +418,7 @@
     }
    ],
    "source": [
-    "ds1D_jitted(x,a_jnp,h_jnp,c_i1_jnp)"
+    "ds1D_jitted(x, a_jnp, h_jnp, c_i1_jnp)"
    ]
   },
   {
@@ -437,8 +439,8 @@
     }
    ],
    "source": [
-    "x=jnp.array([0.5])\n",
-    "ds1D_jitted(x,a_jnp,h_jnp,c_i1_jnp)"
+    "x = jnp.array([0.5])\n",
+    "ds1D_jitted(x, a_jnp, h_jnp, c_i1_jnp)"
    ]
   },
   {
@@ -458,7 +460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s1D_fun= jit(value_and_grad(s1D))"
+    "s1D_fun = jit(value_and_grad(s1D))"
    ]
   },
   {
@@ -480,7 +482,7 @@
     }
    ],
    "source": [
-    "s1D_fun(x,a_jnp,h_jnp,c_i1_jnp)"
+    "s1D_fun(x, a_jnp, h_jnp, c_i1_jnp)"
    ]
   },
   {
@@ -502,8 +504,8 @@
     }
    ],
    "source": [
-    "x=jnp.array([0.5])\n",
-    "s1D_fun(x,a_jnp,h_jnp,c_i1_jnp)"
+    "x = jnp.array([0.5])\n",
+    "s1D_fun(x, a_jnp, h_jnp, c_i1_jnp)"
    ]
   },
   {
