--- a/jupyter_notebooks/3D_spline_v3_JAX.ipynb
+++ b/jupyter_notebooks/3D_spline_v3_JAX.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N=3 # dimension (number of independent variables)"
+    "N = 3  # dimension (number of independent variables)"
    ]
   },
   {
@@ -38,10 +38,10 @@
    "outputs": [],
    "source": [
     "# lower and uppder bounds of x-coordinate in each dimension [a,b]\n",
-    "a=[0,0,0] # [1st dim, 2nd dim, 3rd dim]\n",
-    "b=[1,2,3] # [1st dim, 2nd dim, 3rd dim]\n",
-    "a= np.array(a, dtype=float)\n",
-    "b= np.array(b, dtype=float)"
+    "a = [0, 0, 0]  # [1st dim, 2nd dim, 3rd dim]\n",
+    "b = [1, 2, 3]  # [1st dim, 2nd dim, 3rd dim]\n",
+    "a = np.array(a, dtype=float)\n",
+    "b = np.array(b, dtype=float)"
    ]
   },
   {
@@ -52,8 +52,8 @@
    "outputs": [],
    "source": [
     "# number of grid interval n in each dimension\n",
-    "n=[10,20,30] # [1st dim, 2nd dim, 3rd dim]\n",
-    "n= np.array(n, dtype=int)"
+    "n = [10, 20, 30]  # [1st dim, 2nd dim, 3rd dim]\n",
+    "n = np.array(n, dtype=int)"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "# grid interval n in each dimension\n",
-    "h=(b-a)/n"
+    "h = (b - a) / n"
    ]
   },
   {
@@ -74,10 +74,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#x_grid=(np.linspace(a[0],b[0],n[0]+1), np.linspace(a[1],b[1],n[1]+1))  # tuple of (1st dim grid points , 2nd dim grid points) \n",
-    "x_grid=()\n",
+    "# x_grid=(np.linspace(a[0],b[0],n[0]+1), np.linspace(a[1],b[1],n[1]+1))  # tuple of (1st dim grid points , 2nd dim grid points)\n",
+    "x_grid = ()\n",
     "for j in range(N):\n",
-    "    x_grid += (np.linspace(a[j],b[j],n[j]+1),)\n",
+    "    x_grid += (np.linspace(a[j], b[j], n[j] + 1),)\n",
     "# x_grid[0] is numpy array of 1st dim grid points\n",
     "# x_grid[1] is numpy array of 2nd dim grid points\n",
     "# x_grid"
@@ -90,10 +90,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid_shape=()\n",
+    "grid_shape = ()\n",
     "for j in range(N):\n",
-    "    grid_shape += (n[j]+1,)\n",
-    "y_data= np.zeros(grid_shape)"
+    "    grid_shape += (n[j] + 1,)\n",
+    "y_data = np.zeros(grid_shape)"
    ]
   },
   {
@@ -104,11 +104,13 @@
    "outputs": [],
    "source": [
     "# test y_data\n",
-    "for q1 in range(n[0]+1):\n",
-    "    for q2 in range(n[1]+1):\n",
-    "        for q3 in range(n[2]+1):\n",
-    "            y_data[q1,q2,q3]= np.sin(x_grid[0][q1])*np.sin(x_grid[1][q2])*np.sin(x_grid[2][q3])\n",
-    "#y_data"
+    "for q1 in range(n[0] + 1):\n",
+    "    for q2 in range(n[1] + 1):\n",
+    "        for q3 in range(n[2] + 1):\n",
+    "            y_data[q1, q2, q3] = (\n",
+    "                np.sin(x_grid[0][q1]) * np.sin(x_grid[1][q2]) * np.sin(x_grid[2][q3])\n",
+    "            )\n",
+    "# y_data"
    ]
   },
   {
@@ -119,100 +121,104 @@
    "outputs": [],
    "source": [
     "def compute_3D_spline_coefs(y_data):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Compute 3D spline coefficient matrix c_i1i2i3\n",
-    "    \n",
+    "\n",
     "    INPUTs:\n",
-    "        y_data: 3D numpy array of y data (real scalar) at x_grid points \n",
-    "    '''\n",
-    "    \n",
-    "    N=3 # dimension of the problem\n",
-    "    \n",
+    "        y_data: 3D numpy array of y data (real scalar) at x_grid points\n",
+    "    \"\"\"\n",
+    "    N = 3  # dimension of the problem\n",
+    "\n",
     "    for j in range(N):\n",
-    "        n[j]= y_data.shape[j]-1 #number of grid interval n in each dimension\n",
-    "    \n",
-    "    \n",
-    "    k=0 # 1-st dimension\n",
-    "    c_shape=()\n",
+    "        n[j] = y_data.shape[j] - 1  # number of grid interval n in each dimension\n",
+    "\n",
+    "    k = 0  # 1-st dimension\n",
+    "    c_shape = ()\n",
     "    for j in range(N):\n",
-    "        if j <= k :\n",
-    "            c_shape += (n[j]+3,)\n",
+    "        if j <= k:\n",
+    "            c_shape += (n[j] + 3,)\n",
     "        else:\n",
-    "            c_shape += (n[j]+1,)\n",
-    "    c_i1q2q3=np.zeros(c_shape)\n",
+    "            c_shape += (n[j] + 1,)\n",
+    "    c_i1q2q3 = np.zeros(c_shape)\n",
     "    del c_shape\n",
-    "    for q2 in range(n[1]+1):\n",
-    "        for q3 in range(n[2]+1):\n",
-    "            c_i1q2q3[1,q2,q3]=y_data[0,q2,q3]/6 # c_{2}\n",
-    "            c_i1q2q3[n[k]+1,q2,q3]=y_data[n[k],q2,q3]/6 # c_{n+2}\n",
-    "            A = np.zeros((n[k]-1,n[k]-1))\n",
-    "            for i in range(n[k]-1):\n",
-    "                A[i,i]=4\n",
-    "                if i+1 < n[k]-1 :\n",
-    "                    A[i,i+1]= A[i+1,i]=1\n",
-    "            B = np.zeros(n[k]-1)\n",
-    "            B[0]=y_data[1,q2,q3]-c_i1q2q3[1,q2,q3]\n",
-    "            B[n[k]-2]=y_data[n[k]-1,q2,q3]-c_i1q2q3[n[k]+1,q2,q3]\n",
-    "            B[1:n[k]-2]=y_data[2:n[k]-1,q2,q3]\n",
+    "    for q2 in range(n[1] + 1):\n",
+    "        for q3 in range(n[2] + 1):\n",
+    "            c_i1q2q3[1, q2, q3] = y_data[0, q2, q3] / 6  # c_{2}\n",
+    "            c_i1q2q3[n[k] + 1, q2, q3] = y_data[n[k], q2, q3] / 6  # c_{n+2}\n",
+    "            A = np.zeros((n[k] - 1, n[k] - 1))\n",
+    "            for i in range(n[k] - 1):\n",
+    "                A[i, i] = 4\n",
+    "                if i + 1 < n[k] - 1:\n",
+    "                    A[i, i + 1] = A[i + 1, i] = 1\n",
+    "            B = np.zeros(n[k] - 1)\n",
+    "            B[0] = y_data[1, q2, q3] - c_i1q2q3[1, q2, q3]\n",
+    "            B[n[k] - 2] = y_data[n[k] - 1, q2, q3] - c_i1q2q3[n[k] + 1, q2, q3]\n",
+    "            B[1 : n[k] - 2] = y_data[2 : n[k] - 1, q2, q3]\n",
     "            sol = linalg.solve(A, B)\n",
-    "            c_i1q2q3[2:n[k]+1,q2,q3]=sol\n",
-    "            c_i1q2q3[0,q2,q3]=2*c_i1q2q3[1,q2,q3]-c_i1q2q3[2,q2,q3]\n",
-    "            c_i1q2q3[n[k]+2,q2,q3]=2*c_i1q2q3[n[k]+1,q2,q3]-c_i1q2q3[n[k],q2,q3]\n",
-    "            \n",
-    "    k=1 # 2nd dimension\n",
-    "    c_shape=()\n",
+    "            c_i1q2q3[2 : n[k] + 1, q2, q3] = sol\n",
+    "            c_i1q2q3[0, q2, q3] = 2 * c_i1q2q3[1, q2, q3] - c_i1q2q3[2, q2, q3]\n",
+    "            c_i1q2q3[n[k] + 2, q2, q3] = (\n",
+    "                2 * c_i1q2q3[n[k] + 1, q2, q3] - c_i1q2q3[n[k], q2, q3]\n",
+    "            )\n",
+    "\n",
+    "    k = 1  # 2nd dimension\n",
+    "    c_shape = ()\n",
     "    for j in range(N):\n",
-    "        if j <= k :\n",
-    "            c_shape += (n[j]+3,)\n",
+    "        if j <= k:\n",
+    "            c_shape += (n[j] + 3,)\n",
     "        else:\n",
-    "            c_shape += (n[j]+1,)\n",
-    "    c_i1i2q3=np.zeros(c_shape)\n",
+    "            c_shape += (n[j] + 1,)\n",
+    "    c_i1i2q3 = np.zeros(c_shape)\n",
     "    del c_shape\n",
-    "    for i1 in range(n[0]+3):\n",
-    "        for q3 in range(n[2]+1):\n",
-    "            c_i1i2q3[i1,1,q3]=c_i1q2q3[i1,0,q3]/6 # c_{2}\n",
-    "            c_i1i2q3[i1,n[k]+1,q3]=c_i1q2q3[i1,n[k],q3]/6 # c_{n+2}\n",
-    "            A = np.zeros((n[k]-1,n[k]-1))\n",
-    "            for i in range(n[k]-1):\n",
-    "                A[i,i]=4\n",
-    "                if i+1 < n[k]-1 :\n",
-    "                    A[i,i+1]= A[i+1,i]=1\n",
-    "            B = np.zeros(n[k]-1)\n",
-    "            B[0]=c_i1q2q3[i1,1,q3]-c_i1i2q3[i1,1,q3]\n",
-    "            B[n[k]-2]=c_i1q2q3[i1,n[k]-1,q3]-c_i1i2q3[i1,n[k]+1,q3]\n",
-    "            B[1:n[k]-2]=c_i1q2q3[i1,2:n[k]-1,q3]\n",
+    "    for i1 in range(n[0] + 3):\n",
+    "        for q3 in range(n[2] + 1):\n",
+    "            c_i1i2q3[i1, 1, q3] = c_i1q2q3[i1, 0, q3] / 6  # c_{2}\n",
+    "            c_i1i2q3[i1, n[k] + 1, q3] = c_i1q2q3[i1, n[k], q3] / 6  # c_{n+2}\n",
+    "            A = np.zeros((n[k] - 1, n[k] - 1))\n",
+    "            for i in range(n[k] - 1):\n",
+    "                A[i, i] = 4\n",
+    "                if i + 1 < n[k] - 1:\n",
+    "                    A[i, i + 1] = A[i + 1, i] = 1\n",
+    "            B = np.zeros(n[k] - 1)\n",
+    "            B[0] = c_i1q2q3[i1, 1, q3] - c_i1i2q3[i1, 1, q3]\n",
+    "            B[n[k] - 2] = c_i1q2q3[i1, n[k] - 1, q3] - c_i1i2q3[i1, n[k] + 1, q3]\n",
+    "            B[1 : n[k] - 2] = c_i1q2q3[i1, 2 : n[k] - 1, q3]\n",
     "            sol = linalg.solve(A, B)\n",
-    "            c_i1i2q3[i1,2:n[k]+1,q3]=sol\n",
-    "            c_i1i2q3[i1,0,q3]=2*c_i1i2q3[i1,1,q3]-c_i1i2q3[i1,2,q3]\n",
-    "            c_i1i2q3[i1,n[k]+2,q3]=2*c_i1i2q3[i1,n[k]+1,q3]-c_i1i2q3[i1,n[k],q3]\n",
-    "            \n",
-    "    k=2 # 3rd dimension\n",
-    "    c_shape=()\n",
+    "            c_i1i2q3[i1, 2 : n[k] + 1, q3] = sol\n",
+    "            c_i1i2q3[i1, 0, q3] = 2 * c_i1i2q3[i1, 1, q3] - c_i1i2q3[i1, 2, q3]\n",
+    "            c_i1i2q3[i1, n[k] + 2, q3] = (\n",
+    "                2 * c_i1i2q3[i1, n[k] + 1, q3] - c_i1i2q3[i1, n[k], q3]\n",
+    "            )\n",
+    "\n",
+    "    k = 2  # 3rd dimension\n",
+    "    c_shape = ()\n",
     "    for j in range(N):\n",
-    "        if j <= k :\n",
-    "            c_shape += (n[j]+3,)\n",
+    "        if j <= k:\n",
+    "            c_shape += (n[j] + 3,)\n",
     "        else:\n",
-    "            c_shape += (n[j]+1,)\n",
-    "    c_i1i2i3=np.zeros(c_shape)\n",
+    "            c_shape += (n[j] + 1,)\n",
+    "    c_i1i2i3 = np.zeros(c_shape)\n",
     "    del c_shape\n",
-    "    for i1 in range(n[0]+3):\n",
-    "        for i2 in range(n[1]+3):\n",
-    "            c_i1i2i3[i1,i2,1]=c_i1i2q3[i1,i2,0]/6 # c_{2}\n",
-    "            c_i1i2i3[i1,i2,n[k]+1]=c_i1i2q3[i1,i2,n[k]]/6 # c_{n+2}\n",
-    "            A = np.zeros((n[k]-1,n[k]-1))\n",
-    "            for i in range(n[k]-1):\n",
-    "                A[i,i]=4\n",
-    "                if i+1 < n[k]-1 :\n",
-    "                    A[i,i+1]= A[i+1,i]=1\n",
-    "            B = np.zeros(n[k]-1)\n",
-    "            B[0]=c_i1i2q3[i1,i2,1]-c_i1i2i3[i1,i2,1]\n",
-    "            B[n[k]-2]=c_i1i2q3[i1,i2,n[k]-1]-c_i1i2i3[i1,i2,n[k]+1]\n",
-    "            B[1:n[k]-2]=c_i1i2q3[i1,i2,2:n[k]-1]\n",
+    "    for i1 in range(n[0] + 3):\n",
+    "        for i2 in range(n[1] + 3):\n",
+    "            c_i1i2i3[i1, i2, 1] = c_i1i2q3[i1, i2, 0] / 6  # c_{2}\n",
+    "            c_i1i2i3[i1, i2, n[k] + 1] = c_i1i2q3[i1, i2, n[k]] / 6  # c_{n+2}\n",
+    "            A = np.zeros((n[k] - 1, n[k] - 1))\n",
+    "            for i in range(n[k] - 1):\n",
+    "                A[i, i] = 4\n",
+    "                if i + 1 < n[k] - 1:\n",
+    "                    A[i, i + 1] = A[i + 1, i] = 1\n",
+    "            B = np.zeros(n[k] - 1)\n",
+    "            B[0] = c_i1i2q3[i1, i2, 1] - c_i1i2i3[i1, i2, 1]\n",
+    "            B[n[k] - 2] = c_i1i2q3[i1, i2, n[k] - 1] - c_i1i2i3[i1, i2, n[k] + 1]\n",
+    "            B[1 : n[k] - 2] = c_i1i2q3[i1, i2, 2 : n[k] - 1]\n",
     "            sol = linalg.solve(A, B)\n",
-    "            c_i1i2i3[i1,i2,2:n[k]+1]=sol\n",
-    "            c_i1i2i3[i1,i2,0]=2*c_i1i2i3[i1,i2,1]-c_i1i2i3[i1,i2,2]\n",
-    "            c_i1i2i3[i1,i2,n[k]+2]=2*c_i1i2i3[i1,i2,n[k]+1]-c_i1i2i3[i1,i2,n[k]]\n",
-    "    \n",
+    "            c_i1i2i3[i1, i2, 2 : n[k] + 1] = sol\n",
+    "            c_i1i2i3[i1, i2, 0] = 2 * c_i1i2i3[i1, i2, 1] - c_i1i2i3[i1, i2, 2]\n",
+    "            c_i1i2i3[i1, i2, n[k] + 2] = (\n",
+    "                2 * c_i1i2i3[i1, i2, n[k] + 1] - c_i1i2i3[i1, i2, n[k]]\n",
+    "            )\n",
+    "\n",
     "    return c_i1i2i3"
    ]
   },
@@ -223,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c_i1i2i3= compute_3D_spline_coefs(y_data)"
+    "c_i1i2i3 = compute_3D_spline_coefs(y_data)"
    ]
   },
   {
@@ -244,7 +250,7 @@
     }
    ],
    "source": [
-    "c_i1i2i3[6,9,10]"
+    "c_i1i2i3[6, 9, 10]"
    ]
   },
   {
@@ -262,8 +268,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jax import lax\n",
-    "import jax.numpy as jnp"
+    "import jax.numpy as jnp\n",
+    "from jax import lax"
    ]
   },
   {
@@ -273,33 +279,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#3D-spline function (jittable and auto-differentiable)\n",
-    "def s3D(x,a,h,c_i1i2i3):\n",
-    "    '''\n",
+    "# 3D-spline function (jittable and auto-differentiable)\n",
+    "def s3D(x, a, h, c_i1i2i3):\n",
+    "    \"\"\"\n",
     "    3D-spline interpolation\n",
-    "    \n",
+    "\n",
     "    INPUTs\n",
-    "        x: 2-dim x vector (float) at which interplated y-value is evaluated \n",
+    "        x: 2-dim x vector (float) at which interplated y-value is evaluated\n",
     "        a: 2-dim vector (float) of the lower boundary of the each of the x-dimension\n",
     "        h: 2-dim vector (float) of the grid interval of the each of the x-dimension\n",
-    "        c_i1i2i3: spline coefficent (3-dim array)\n",
-    "    '''\n",
-    "    \n",
-    "    def u(ii,aa,hh,xx):\n",
-    "        t= jnp.abs((xx-aa)/hh + 2 - ii)\n",
-    "        return lax.cond(t <= 1, lambda t: 4.-6.*t**2+3.*t**3, lambda t: (2.-t)**3, t)*jnp.heaviside(2.-t, 1.)\n",
-    "    \n",
-    "    def f(carry,i1,i2,i3,c_i1i2i3,a,h,x):\n",
-    "        val = c_i1i2i3[i1-1,i2-1,i3-1]*u(i1,a[0],h[0],x[0])*u(i2,a[1],h[1],x[1])*u(i3,a[2],h[2],x[2])\n",
+    "        c_i1i2i3: spline coefficient (3-dim array)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def u(ii, aa, hh, xx):\n",
+    "        t = jnp.abs((xx - aa) / hh + 2 - ii)\n",
+    "        return lax.cond(\n",
+    "            t <= 1, lambda t: 4.0 - 6.0 * t**2 + 3.0 * t**3, lambda t: (2.0 - t) ** 3, t\n",
+    "        ) * jnp.heaviside(2.0 - t, 1.0)\n",
+    "\n",
+    "    def f(carry, i1, i2, i3, c_i1i2i3, a, h, x):\n",
+    "        val = (\n",
+    "            c_i1i2i3[i1 - 1, i2 - 1, i3 - 1]\n",
+    "            * u(i1, a[0], h[0], x[0])\n",
+    "            * u(i2, a[1], h[1], x[1])\n",
+    "            * u(i3, a[2], h[2], x[2])\n",
+    "        )\n",
     "        carry += val\n",
-    "        return carry,val\n",
-    "    \n",
-    "    i1arr=jnp.arange(1,c_i1i2i3.shape[0]+1)\n",
-    "    i2arr=jnp.arange(1,c_i1i2i3.shape[1]+1)\n",
-    "    i3arr=jnp.arange(1,c_i1i2i3.shape[2]+1)\n",
-    "    \n",
-    "    carry, val =  lax.scan(lambda s1, i1: lax.scan(lambda s2, i2: lax.scan(lambda s3, i3: f(s3, i1=i1, i2=i2, i3=i3, c_i1i2i3=c_i1i2i3,a=a,h=h,x=x), s2, i3arr), s1, i2arr), 0.0, i1arr)\n",
-    "    \n",
+    "        return carry, val\n",
+    "\n",
+    "    i1arr = jnp.arange(1, c_i1i2i3.shape[0] + 1)\n",
+    "    i2arr = jnp.arange(1, c_i1i2i3.shape[1] + 1)\n",
+    "    i3arr = jnp.arange(1, c_i1i2i3.shape[2] + 1)\n",
+    "\n",
+    "    carry, val = lax.scan(\n",
+    "        lambda s1, i1: lax.scan(\n",
+    "            lambda s2, i2: lax.scan(\n",
+    "                lambda s3, i3: f(\n",
+    "                    s3, i1=i1, i2=i2, i3=i3, c_i1i2i3=c_i1i2i3, a=a, h=h, x=x\n",
+    "                ),\n",
+    "                s2,\n",
+    "                i3arr,\n",
+    "            ),\n",
+    "            s1,\n",
+    "            i2arr,\n",
+    "        ),\n",
+    "        0.0,\n",
+    "        i1arr,\n",
+    "    )\n",
+    "\n",
     "    return carry"
    ]
   },
@@ -318,9 +345,9 @@
     }
    ],
    "source": [
-    "c_i1i2i3_jnp= jnp.array(c_i1i2i3)\n",
-    "a_jnp=jnp.array(a)\n",
-    "h_jnp=jnp.array(h)"
+    "c_i1i2i3_jnp = jnp.array(c_i1i2i3)\n",
+    "a_jnp = jnp.array(a)\n",
+    "h_jnp = jnp.array(h)"
    ]
   },
   {
@@ -330,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x=jnp.array([0.5,1.0,1.6])"
+    "x = jnp.array([0.5, 1.0, 1.6])"
    ]
   },
   {
@@ -351,7 +378,7 @@
     }
    ],
    "source": [
-    "s3D(x,a_jnp,h_jnp,c_i1i2i3_jnp)"
+    "s3D(x, a_jnp, h_jnp, c_i1i2i3_jnp)"
    ]
   },
   {
@@ -372,7 +399,7 @@
     }
    ],
    "source": [
-    "y_data[5,10,15]"
+    "y_data[5, 10, 15]"
    ]
   },
   {
@@ -400,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3D_jitted= jit(s3D)"
+    "s3D_jitted = jit(s3D)"
    ]
   },
   {
@@ -421,7 +448,7 @@
     }
    ],
    "source": [
-    "s3D_jitted(x,a_jnp,h_jnp,c_i1i2i3_jnp)"
+    "s3D_jitted(x, a_jnp, h_jnp, c_i1i2i3_jnp)"
    ]
   },
   {
@@ -431,7 +458,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds3D= grad(s3D)"
+    "ds3D = grad(s3D)"
    ]
   },
   {
@@ -452,7 +479,7 @@
     }
    ],
    "source": [
-    "ds3D(x,a_jnp,h_jnp,c_i1i2i3_jnp)"
+    "ds3D(x, a_jnp, h_jnp, c_i1i2i3_jnp)"
    ]
   },
   {
@@ -462,7 +489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds3D_jitted= jit(grad(s3D))"
+    "ds3D_jitted = jit(grad(s3D))"
    ]
   },
   {
@@ -483,7 +510,7 @@
     }
    ],
    "source": [
-    "ds3D_jitted(x,a_jnp,h_jnp,c_i1i2i3_jnp)"
+    "ds3D_jitted(x, a_jnp, h_jnp, c_i1i2i3_jnp)"
    ]
   },
   {
@@ -504,8 +531,8 @@
     }
    ],
    "source": [
-    "x=jnp.array([0.5,1.0,1.6])\n",
-    "ds3D_jitted(x,a_jnp,h_jnp,c_i1i2i3_jnp)"
+    "x = jnp.array([0.5, 1.0, 1.6])\n",
+    "ds3D_jitted(x, a_jnp, h_jnp, c_i1i2i3_jnp)"
    ]
   },
   {
@@ -525,7 +552,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3D_fun= jit(value_and_grad(s3D))"
+    "s3D_fun = jit(value_and_grad(s3D))"
    ]
   },
   {
@@ -547,7 +574,7 @@
     }
    ],
    "source": [
-    "s3D_fun(x,a_jnp,h_jnp,c_i1i2i3_jnp)"
+    "s3D_fun(x, a_jnp, h_jnp, c_i1i2i3_jnp)"
    ]
   },
   {
@@ -569,8 +596,8 @@
     }
    ],
    "source": [
-    "x=jnp.array([0.5,1.0,1.5])\n",
-    "s3D_fun(x,a_jnp,h_jnp,c_i1i2i3_jnp)"
+    "x = jnp.array([0.5, 1.0, 1.5])\n",
+    "s3D_fun(x, a_jnp, h_jnp, c_i1i2i3_jnp)"
    ]
   },
   {
