--- a/jupyter_notebooks/2D_spline_v3_JAX.ipynb
+++ b/jupyter_notebooks/2D_spline_v3_JAX.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N=2 # dimension (number of independent variables)"
+    "N = 2  # dimension (number of independent variables)"
    ]
   },
   {
@@ -38,10 +38,10 @@
    "outputs": [],
    "source": [
     "# lower and uppder bounds of x-coordinate in each dimension [a,b]\n",
-    "a=[0,0] # [1st dim, 2nd dim]\n",
-    "b=[1,2] # [1st dim, 2nd dim]\n",
-    "a= np.array(a, dtype=float)\n",
-    "b= np.array(b, dtype=float)"
+    "a = [0, 0]  # [1st dim, 2nd dim]\n",
+    "b = [1, 2]  # [1st dim, 2nd dim]\n",
+    "a = np.array(a, dtype=float)\n",
+    "b = np.array(b, dtype=float)"
    ]
   },
   {
@@ -52,8 +52,8 @@
    "outputs": [],
    "source": [
     "# number of grid interval n in each dimension\n",
-    "n=[10,20] # [1st dim, 2nd dim]\n",
-    "n= np.array(n, dtype=int)"
+    "n = [10, 20]  # [1st dim, 2nd dim]\n",
+    "n = np.array(n, dtype=int)"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "# grid interval n in each dimension\n",
-    "h=(b-a)/n"
+    "h = (b - a) / n"
    ]
   },
   {
@@ -74,10 +74,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#x_grid=(np.linspace(a[0],b[0],n[0]+1), np.linspace(a[1],b[1],n[1]+1))  # tuple of (1st dim grid points , 2nd dim grid points) \n",
-    "x_grid=()\n",
+    "# x_grid=(np.linspace(a[0],b[0],n[0]+1), np.linspace(a[1],b[1],n[1]+1))  # tuple of (1st dim grid points , 2nd dim grid points)\n",
+    "x_grid = ()\n",
     "for j in range(N):\n",
-    "    x_grid += (np.linspace(a[j],b[j],n[j]+1),)\n",
+    "    x_grid += (np.linspace(a[j], b[j], n[j] + 1),)\n",
     "# x_grid[0] is numpy array of 1st dim grid points\n",
     "# x_grid[1] is numpy array of 2nd dim grid points\n",
     "# x_grid"
@@ -90,10 +90,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid_shape=()\n",
+    "grid_shape = ()\n",
     "for j in range(N):\n",
-    "    grid_shape += (n[j]+1,)\n",
-    "y_data= np.zeros(grid_shape)"
+    "    grid_shape += (n[j] + 1,)\n",
+    "y_data = np.zeros(grid_shape)"
    ]
   },
   {
@@ -104,10 +104,10 @@
    "outputs": [],
    "source": [
     "# test y_data\n",
-    "for q1 in range(n[0]+1):\n",
-    "    for q2 in range(n[1]+1):\n",
-    "        y_data[q1,q2]= np.sin(x_grid[0][q1])*np.sin(x_grid[1][q2])\n",
-    "#y_data"
+    "for q1 in range(n[0] + 1):\n",
+    "    for q2 in range(n[1] + 1):\n",
+    "        y_data[q1, q2] = np.sin(x_grid[0][q1]) * np.sin(x_grid[1][q2])\n",
+    "# y_data"
    ]
   },
   {
@@ -118,71 +118,69 @@
    "outputs": [],
    "source": [
     "def compute_2D_spline_coefs(y_data):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Compute 2D spline coefficient matrix c_i1i2\n",
-    "    \n",
+    "\n",
     "    INPUTs:\n",
-    "        y_data: 2D numpy array of y data (real scalar) at x_grid points \n",
-    "    '''\n",
-    "    \n",
-    "    N=2 # dimension of the problem\n",
-    "    \n",
+    "        y_data: 2D numpy array of y data (real scalar) at x_grid points\n",
+    "    \"\"\"\n",
+    "    N = 2  # dimension of the problem\n",
+    "\n",
     "    for j in range(N):\n",
-    "        n[j]= y_data.shape[j]-1 #number of grid interval n in each dimension\n",
-    "    \n",
-    "    \n",
-    "    k=0 # 1-st dimension\n",
-    "    c_shape=()\n",
+    "        n[j] = y_data.shape[j] - 1  # number of grid interval n in each dimension\n",
+    "\n",
+    "    k = 0  # 1-st dimension\n",
+    "    c_shape = ()\n",
     "    for j in range(N):\n",
-    "        if j <= k :\n",
-    "            c_shape += (n[j]+3,)\n",
+    "        if j <= k:\n",
+    "            c_shape += (n[j] + 3,)\n",
     "        else:\n",
-    "            c_shape += (n[j]+1,)\n",
-    "    c_i1q2=np.zeros(c_shape)\n",
+    "            c_shape += (n[j] + 1,)\n",
+    "    c_i1q2 = np.zeros(c_shape)\n",
     "    del c_shape\n",
-    "    for q2 in range(n[1]+1):\n",
-    "        c_i1q2[1,q2]=y_data[0,q2]/6 # c_{2}\n",
-    "        c_i1q2[n[k]+1,q2]=y_data[n[k],q2]/6 # c_{n+2}\n",
-    "        A = np.zeros((n[k]-1,n[k]-1))\n",
-    "        for i in range(n[k]-1):\n",
-    "            A[i,i]=4\n",
-    "            if i+1 < n[k]-1 :\n",
-    "                A[i,i+1]= A[i+1,i]=1\n",
-    "        B = np.zeros(n[k]-1)\n",
-    "        B[0]=y_data[1,q2]-c_i1q2[1,q2]\n",
-    "        B[n[k]-2]=y_data[n[k]-1,q2]-c_i1q2[n[k]+1,q2]\n",
-    "        B[1:n[k]-2]=y_data[2:n[k]-1,q2]\n",
+    "    for q2 in range(n[1] + 1):\n",
+    "        c_i1q2[1, q2] = y_data[0, q2] / 6  # c_{2}\n",
+    "        c_i1q2[n[k] + 1, q2] = y_data[n[k], q2] / 6  # c_{n+2}\n",
+    "        A = np.zeros((n[k] - 1, n[k] - 1))\n",
+    "        for i in range(n[k] - 1):\n",
+    "            A[i, i] = 4\n",
+    "            if i + 1 < n[k] - 1:\n",
+    "                A[i, i + 1] = A[i + 1, i] = 1\n",
+    "        B = np.zeros(n[k] - 1)\n",
+    "        B[0] = y_data[1, q2] - c_i1q2[1, q2]\n",
+    "        B[n[k] - 2] = y_data[n[k] - 1, q2] - c_i1q2[n[k] + 1, q2]\n",
+    "        B[1 : n[k] - 2] = y_data[2 : n[k] - 1, q2]\n",
     "        sol = linalg.solve(A, B)\n",
-    "        c_i1q2[2:n[k]+1,q2]=sol\n",
-    "        c_i1q2[0,q2]=2*c_i1q2[1,q2]-c_i1q2[2,q2]\n",
-    "        c_i1q2[n[k]+2,q2]=2*c_i1q2[n[k]+1,q2]-c_i1q2[n[k],q2]\n",
-    "            \n",
-    "    k=1 # 2nd dimension\n",
-    "    c_shape=()\n",
+    "        c_i1q2[2 : n[k] + 1, q2] = sol\n",
+    "        c_i1q2[0, q2] = 2 * c_i1q2[1, q2] - c_i1q2[2, q2]\n",
+    "        c_i1q2[n[k] + 2, q2] = 2 * c_i1q2[n[k] + 1, q2] - c_i1q2[n[k], q2]\n",
+    "\n",
+    "    k = 1  # 2nd dimension\n",
+    "    c_shape = ()\n",
     "    for j in range(N):\n",
-    "        if j <= k :\n",
-    "            c_shape += (n[j]+3,)\n",
+    "        if j <= k:\n",
+    "            c_shape += (n[j] + 3,)\n",
     "        else:\n",
-    "            c_shape += (n[j]+1,)\n",
-    "    c_i1i2=np.zeros(c_shape)\n",
+    "            c_shape += (n[j] + 1,)\n",
+    "    c_i1i2 = np.zeros(c_shape)\n",
     "    del c_shape\n",
-    "    for i1 in range(n[0]+3):\n",
-    "        c_i1i2[i1,1]=c_i1q2[i1,0]/6 # c_{2}\n",
-    "        c_i1i2[i1,n[k]+1]=c_i1q2[i1,n[k]]/6 # c_{n+2}\n",
-    "        A = np.zeros((n[k]-1,n[k]-1))\n",
-    "        for i in range(n[k]-1):\n",
-    "            A[i,i]=4\n",
-    "            if i+1 < n[k]-1 :\n",
-    "                A[i,i+1]= A[i+1,i]=1\n",
-    "        B = np.zeros(n[k]-1)\n",
-    "        B[0]=c_i1q2[i1,1]-c_i1i2[i1,1]\n",
-    "        B[n[k]-2]=c_i1q2[i1,n[k]-1]-c_i1i2[i1,n[k]+1]\n",
-    "        B[1:n[k]-2]=c_i1q2[i1,2:n[k]-1]\n",
+    "    for i1 in range(n[0] + 3):\n",
+    "        c_i1i2[i1, 1] = c_i1q2[i1, 0] / 6  # c_{2}\n",
+    "        c_i1i2[i1, n[k] + 1] = c_i1q2[i1, n[k]] / 6  # c_{n+2}\n",
+    "        A = np.zeros((n[k] - 1, n[k] - 1))\n",
+    "        for i in range(n[k] - 1):\n",
+    "            A[i, i] = 4\n",
+    "            if i + 1 < n[k] - 1:\n",
+    "                A[i, i + 1] = A[i + 1, i] = 1\n",
+    "        B = np.zeros(n[k] - 1)\n",
+    "        B[0] = c_i1q2[i1, 1] - c_i1i2[i1, 1]\n",
+    "        B[n[k] - 2] = c_i1q2[i1, n[k] - 1] - c_i1i2[i1, n[k] + 1]\n",
+    "        B[1 : n[k] - 2] = c_i1q2[i1, 2 : n[k] - 1]\n",
     "        sol = linalg.solve(A, B)\n",
-    "        c_i1i2[i1,2:n[k]+1]=sol\n",
-    "        c_i1i2[i1,0]=2*c_i1i2[i1,1]-c_i1i2[i1,2]\n",
-    "        c_i1i2[i1,n[k]+2]=2*c_i1i2[i1,n[k]+1]-c_i1i2[i1,n[k]]\n",
-    "            \n",
+    "        c_i1i2[i1, 2 : n[k] + 1] = sol\n",
+    "        c_i1i2[i1, 0] = 2 * c_i1i2[i1, 1] - c_i1i2[i1, 2]\n",
+    "        c_i1i2[i1, n[k] + 2] = 2 * c_i1i2[i1, n[k] + 1] - c_i1i2[i1, n[k]]\n",
+    "\n",
     "    return c_i1i2"
    ]
   },
@@ -193,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c_i1i2= compute_2D_spline_coefs(y_data)"
+    "c_i1i2 = compute_2D_spline_coefs(y_data)"
    ]
   },
   {
@@ -214,7 +212,7 @@
     }
    ],
    "source": [
-    "c_i1i2[6,9]"
+    "c_i1i2[6, 9]"
    ]
   },
   {
@@ -232,8 +230,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jax import lax\n",
-    "import jax.numpy as jnp"
+    "import jax.numpy as jnp\n",
+    "from jax import lax"
    ]
   },
   {
@@ -243,32 +241,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#2D-spline function (jittable and auto-differentiable)\n",
-    "def s2D(x,a,h,c_i1i2):\n",
-    "    '''\n",
+    "# 2D-spline function (jittable and auto-differentiable)\n",
+    "def s2D(x, a, h, c_i1i2):\n",
+    "    \"\"\"\n",
     "    2D-spline interpolation\n",
-    "    \n",
+    "\n",
     "    INPUTs\n",
-    "        x: 2-dim x vector (float) at which interplated y-value is evaluated \n",
+    "        x: 2-dim x vector (float) at which interplated y-value is evaluated\n",
     "        a: 2-dim vector (float) of the lower boundary of the each of the x-dimension\n",
     "        h: 2-dim vector (float) of the grid interval of the each of the x-dimension\n",
-    "        c_i1i2: spline coefficent (2-dim array)\n",
-    "    '''\n",
-    "    \n",
-    "    def u(ii,aa,hh,xx):\n",
-    "        t= jnp.abs((xx-aa)/hh + 2 - ii)\n",
-    "        return lax.cond(t <= 1, lambda t: 4.-6.*t**2+3.*t**3, lambda t: (2.-t)**3, t)*jnp.heaviside(2.-t, 1.)\n",
-    "    \n",
-    "    def f(carry,i1,i2,c_i1i2,a,h,x):\n",
-    "        val = c_i1i2[i1-1,i2-1]*u(i1,a[0],h[0],x[0])*u(i2,a[1],h[1],x[1])\n",
+    "        c_i1i2: spline coefficient (2-dim array)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def u(ii, aa, hh, xx):\n",
+    "        t = jnp.abs((xx - aa) / hh + 2 - ii)\n",
+    "        return lax.cond(\n",
+    "            t <= 1, lambda t: 4.0 - 6.0 * t**2 + 3.0 * t**3, lambda t: (2.0 - t) ** 3, t\n",
+    "        ) * jnp.heaviside(2.0 - t, 1.0)\n",
+    "\n",
+    "    def f(carry, i1, i2, c_i1i2, a, h, x):\n",
+    "        val = c_i1i2[i1 - 1, i2 - 1] * u(i1, a[0], h[0], x[0]) * u(i2, a[1], h[1], x[1])\n",
     "        carry += val\n",
-    "        return carry,val\n",
-    "    \n",
-    "    i1arr=jnp.arange(1,c_i1i2.shape[0]+1)\n",
-    "    i2arr=jnp.arange(1,c_i1i2.shape[1]+1)\n",
-    "    \n",
-    "    carry, val =  lax.scan(lambda s1, i1: lax.scan(lambda s2, i2: f(s2, i1=i1, i2=i2, c_i1i2=c_i1i2,a=a,h=h,x=x), s1, i2arr), 0.0, i1arr)\n",
-    "    \n",
+    "        return carry, val\n",
+    "\n",
+    "    i1arr = jnp.arange(1, c_i1i2.shape[0] + 1)\n",
+    "    i2arr = jnp.arange(1, c_i1i2.shape[1] + 1)\n",
+    "\n",
+    "    carry, val = lax.scan(\n",
+    "        lambda s1, i1: lax.scan(\n",
+    "            lambda s2, i2: f(s2, i1=i1, i2=i2, c_i1i2=c_i1i2, a=a, h=h, x=x), s1, i2arr\n",
+    "        ),\n",
+    "        0.0,\n",
+    "        i1arr,\n",
+    "    )\n",
+    "\n",
     "    return carry"
    ]
   },
@@ -287,9 +293,9 @@
     }
    ],
    "source": [
-    "c_i1i2_jnp= jnp.array(c_i1i2)\n",
-    "a_jnp=jnp.array(a)\n",
-    "h_jnp=jnp.array(h)"
+    "c_i1i2_jnp = jnp.array(c_i1i2)\n",
+    "a_jnp = jnp.array(a)\n",
+    "h_jnp = jnp.array(h)"
    ]
   },
   {
@@ -299,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x=jnp.array([0.5,1.0])"
+    "x = jnp.array([0.5, 1.0])"
    ]
   },
   {
@@ -320,7 +326,7 @@
     }
    ],
    "source": [
-    "s2D(x,a_jnp,h_jnp,c_i1i2_jnp)"
+    "s2D(x, a_jnp, h_jnp, c_i1i2_jnp)"
    ]
   },
   {
@@ -341,7 +347,7 @@
     }
    ],
    "source": [
-    "y_data[5,10]"
+    "y_data[5, 10]"
    ]
   },
   {
@@ -369,7 +375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s2D_jitted= jit(s2D)"
+    "s2D_jitted = jit(s2D)"
    ]
   },
   {
@@ -390,7 +396,7 @@
     }
    ],
    "source": [
-    "s2D_jitted(x,a_jnp,h_jnp,c_i1i2_jnp)"
+    "s2D_jitted(x, a_jnp, h_jnp, c_i1i2_jnp)"
    ]
   },
   {
@@ -400,7 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds2D= grad(s2D)"
+    "ds2D = grad(s2D)"
    ]
   },
   {
@@ -421,7 +427,7 @@
     }
    ],
    "source": [
-    "ds2D(x,a_jnp,h_jnp,c_i1i2_jnp)"
+    "ds2D(x, a_jnp, h_jnp, c_i1i2_jnp)"
    ]
   },
   {
@@ -431,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds2D_jitted= jit(grad(s2D))"
+    "ds2D_jitted = jit(grad(s2D))"
    ]
   },
   {
@@ -452,7 +458,7 @@
     }
    ],
    "source": [
-    "ds2D_jitted(x,a_jnp,h_jnp,c_i1i2_jnp)"
+    "ds2D_jitted(x, a_jnp, h_jnp, c_i1i2_jnp)"
    ]
   },
   {
@@ -473,8 +479,8 @@
     }
    ],
    "source": [
-    "x=jnp.array([0.1,0.2])\n",
-    "ds2D_jitted(x,a_jnp,h_jnp,c_i1i2_jnp)"
+    "x = jnp.array([0.1, 0.2])\n",
+    "ds2D_jitted(x, a_jnp, h_jnp, c_i1i2_jnp)"
    ]
   },
   {
@@ -494,7 +500,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s2D_fun= jit(value_and_grad(s2D))"
+    "s2D_fun = jit(value_and_grad(s2D))"
    ]
   },
   {
@@ -516,7 +522,7 @@
     }
    ],
    "source": [
-    "s2D_fun(x,a_jnp,h_jnp,c_i1i2_jnp)"
+    "s2D_fun(x, a_jnp, h_jnp, c_i1i2_jnp)"
    ]
   },
   {
@@ -538,8 +544,8 @@
     }
    ],
    "source": [
-    "x=jnp.array([0.5,1.0])\n",
-    "s2D_fun(x,a_jnp,h_jnp,c_i1i2_jnp)"
+    "x = jnp.array([0.5, 1.0])\n",
+    "s2D_fun(x, a_jnp, h_jnp, c_i1i2_jnp)"
    ]
   },
   {
